# sap-sentinel

./: .gitignore  README.md  negative_test.env  pyproject.toml
.github/workflows/: sap-sentinel.yml
sap_sentinel/: __main__.py  cli.py  models.py  scripts.py
sap_sentinel/btp/: btp_auth.py  client.py  collect.py
sap_sentinel/btp_snapshot/: schema.py  writer.py
sap_sentinel/output/: json_out.py  sarif.py  text.py
sap_sentinel/rules/: default_rules.json  loader.py
