[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-sentinel"
version = "0.3.0"
description = "SAP Sentinel - CI scanner for SAP/BTP security misconfigurations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
  { name = "AVIK MAZUMDER", email = "avik1984@gmail.com" }
]

dependencies = [
  # keep minimal on purpose
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[project.scripts]
sap-sentinel = "sap_sentinel.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["sap_sentinel*"]
